--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             <input id="text_rev" name="text_rev" type="checkbox">
             <label for="text_rev">היפוך טקסט</label><br>
             <input id="remove_special" name="remove_special" type="checkbox">
-            <label for="remove_special">מחיקת תווים מיוחדים</label><br>
+            <label for="remove_special">מחיקת תווים מיוחדים (משאיר ספרות ואותיות)</label><br>
             <input type="submit" value="בצע" id="submit">   
         </form>
       </div>
